--- a/frontend/src/components/Navigation/MainNavigation.css
+++ b/frontend/src/components/Navigation/MainNavigation.css
@@ -12,13 +12,33 @@
   box-sizing: border-box;
 }
 
+.main-navigation__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .main-navigation__logo h1 {
   margin: 0;
   font-size: 1.5rem;
+  font-family: none;
   color: white;
   letter-spacing: 1px;
 }
+.main-navigation__logo_png  {
+  width: 40px;
+  height: 40px;
+  background-image: url('../../logo.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
 
+@media screen and (max-width: 500px) {
+  .main-navigation__item {
+    display: none;
+  }
+}
 .main-navigation__item {
   margin-left: 1.5rem;
 }
